fix workshop comment newlines and word wrap

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -72,7 +72,7 @@ hr {
 }
 
 .force-wordwrap {
-    white-space: pre-line;
+    /* white-space: pre-line; */
     overflow-wrap: break-word;
     word-wrap: break-word;
     -ms-word-break: break-all;
